Updated for Java 11 and Tomcat 10 compatibility